--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth20": "^1.0.0",
+    "pip-cli": "^1.0.4",
     "python-shell": "^0.5.0"
   },
   "devDependencies": {},
